emmett/test/bad/funcdecl.emt
int returnsInt();
string strvar;

Probe {
   strvar = returnsInt();
}
